# tcl-lambdaric

./: .gitignore  .gitmodules  Makefile.in  README.md  aclocal.m4  configure.ac  lambdaricConfig.sh.in  pkgIndex.tcl.in  suppressions
.github/workflows/: makefile.yml
bench/: awslambdaric-test.tcl  lambdaric.bench
doc/: lambdaric.html  lambdaric.md.in  lambdaric.n
generic/: lambdaric.decls  lambdaric.h.in  lambdaric.re  lambdaricDecls.h  lambdaricInt.h  lambdaricStubInit.c  lambdaricStubLib.c  obstackpool.c  obstackpool.h
tests/: common.tcl  events.tcl  lambdaric.test
